--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,53 @@
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
 h1 {
-  color: blueviolet;
+  color: rgb(50, 46, 46);
+  margin-top: 20px;
+  font-size: 28px;
+  font-family: "Merriweather", serif;
+  font-weight: 900;
+  line-height: 30px;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 21px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+.overview {
+  margin-bottom: 20px;
+}
+.weather-temperature img {
+  margin-right: 10px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 600;
+  color: rgb(50, 46, 46);
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
+  font-weight: 600;
 }
