--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
+  text-transform: capitalize;
   font-size: 18px;
   font-weight: 200;
   line-height: 21px;
