updated time(function formatDate)

--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,13 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-transform: capitalize;
+
   font-size: 18px;
   font-weight: 200;
   line-height: 21px;
+}
+li :first-letter {
+  text-transform: capitalize;
 }
 .weather-app-wrapper {
   max-width: 600px;
