--- a/src/style.css
+++ b/src/style.css
@@ -102,3 +102,20 @@ a:hover {
   font-weight: 700;
   width: 100px;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+.weather-forecast-date {
+  font-size: 16px;
+  color: white;
+}
+.weather-forecast-temperature {
+  font-size: 13px;
+}
+.weather-forecast-temperature-max {
+  color: white;
+}
+.weather-forecast-temperature-min {
+  color: #bfc7cf;
+}
