--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
 h1 {
   color: #f2f2f1;
   margin-top: 20px;
-  font-size: 28px;
+  font-size: 38px;
   font-family: "Merriweather", serif;
   font-weight: 900;
   line-height: 30px;
@@ -27,20 +27,17 @@ li {
 li :first-letter {
   text-transform: capitalize;
 }
-a {
-  text-decoration: none;
-  color: #0353a2;
-}
 small strong {
   color: #6c757d;
 }
 small a {
+  font-weight: bold;
+  color: #037eca;
+  text-decoration: none;
+}
+small a:hover {
   text-decoration: underline;
 }
-a:hover {
-  color: #0262bf;
-}
-
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -79,20 +76,16 @@ a:hover {
   top: -34px;
   font-weight: 600;
 }
-.weather-temperature .active {
-  color: #f2f2f1;
-}
-.weather-temperature .active:hover {
-  text-decoration: none;
-}
 #search-form {
   margin-right: 20px;
 }
 #city-input {
   background-color: #f2f2f1;
-
-  font-size: bold;
+  font-weight: bold;
   border: none;
+}
+#city-input:hover {
+  background-color: white;
 }
 #current-button {
   background-color: #f2f2f1;
@@ -101,6 +94,9 @@ a:hover {
   width: 150px;
   border-color: #037eca;
 }
+#current-button:hover {
+  background-color: white;
+}
 #search-button {
   background-color: #f2f2f1;
   color: #037eca;
@@ -108,16 +104,19 @@ a:hover {
   width: 150px;
   border-color: #037eca;
 }
+#search-button:hover {
+  background-color: white;
+}
 .weather-forecast {
   margin-top: 20px;
   text-align: center;
 }
 .weather-forecast-date {
-  font-size: 16px;
+  font-size: 17px;
   color: white;
 }
 .weather-forecast-temperature {
-  font-size: 13px;
+  font-size: 14px;
 }
 .weather-forecast-temperature-max {
   color: white;
